[package]
name = "gtl"
version = "0.2.0"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """gtl is a Git-based tool designed to simplify the management of multiple remote repositories. It extends Git's functionality by providing one-click initialization and pushing to multiple remote repositories, making it especially useful for developers who need to maintain multiple remote repositories simultaneously."""
keywords = ["git", "helper", "remote", "tool", "repositories"]
repository = "https://github.com/ltpp-universe/gtl.git"
categories = ["data-structures", "development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"