[package]
name = "gtl"
version = "0.5.12"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """gtl is a Git-based tool designed to simplify the management of multiple remote repositories. It extends Git's functionality by providing one-click initialization and pushing to multiple remote repositories, making it especially useful for developers who need to maintain multiple remote repositories simultaneously."""
keywords = ["git", "helper", "remote", "tool", "repositories"]
repository = "https://github.com/crates-dev/gtl.git"
categories = ["data-structures", "development-tools"]
exclude = ["target", "Cargo.lock", "sh", ".github"]

[dependencies]
toml = "0.9.8"
chrono = "0.4.43"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
